# pac2

./: Dockerfile  LICENSE  NOTICE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: yara-check.yml
docs/: advanced-usages.md  attack-scenario.md  design.md  development.md  ethicals.md  how-to-use.md
mount/: cleanup_dropbox.sh  mount_dropbox.sh
pac2/: config.py  dbtest.py  reset_db.sh  wsgi.py
pac2/app/: __init__.py
pac2/app/flow/beacon/: __init__.py  base.py  dropbox.py  http.py
pac2/app/flow/payloads/: __init__.py  base.py  method.py  teams.py
pac2/app/models/: __init__.py  auth.py  client.py  database.py  flowmanagement.py  task.py  teams.py  user.py
pac2/app/routes/: __init__.py  api.py  auth.py  http_reciever.py  http_teams_reciever.py  portal.py
pac2/app/services/: auth_service.py  client_service.py  connection_service.py  environment_service.py  flowmanagement_service.py  task_service.py  teams_service.py  user_service.py
pac2/app/static/css/: channels.css  common.css  dialog.css  inspector.css  messages.css  spin.css
pac2/app/templates/html/: channels.html.j2  client.html.j2  log.html.j2  login.html.j2  messages.html.j2  portal.html.j2  register.html.j2  teams.html.j2
pac2/app/utils/: __init__.py  html.py  logger.py  validation.py
pac2/app/worker/: __init__.py  httpclient.py  monitortask.py  worker.py
pac2/app/worker/dropbox/: __init__.py  config.py  postdata.py  putpayload.py  setupclient.py  specification.md
test/: create_dropbox_payload.py  create_http_payload.py  create_raw_task.py
utils/: powerautomate_c2.yara
(+11 files in other folders)
