[tool.poetry]
name = "pac2"
version = "1.0.0"
description = "PowerAutomate C2 Framework"
authors = ["Team V", "Tomoaki Tani"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "<3.0.0"
sqlalchemy = "^2.0.23"
Flask-SQLAlchemy = "^3.1.1"
werkzeug = "<3.0"
Flask-Migrate = "^4.0.5"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
flask-login = "^0.6.2"
PyPowerAutomate = "1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
